--- a/02-Calculator/calculator.html
+++ b/02-Calculator/calculator.html
@@ -10,8 +10,20 @@
         <div class="centered calculator">
             <textarea id="calculation" class="screen" disabled></textarea>
             <textarea id="solution" class="screen" disabled></textarea>
-            <div class="numpad"></div>
+            <div class="numpad">
+                <!--<button>1</button>
+                <button>2</button>
+                <button>3</button><br>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button><br>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button><br>
+                <button>0</button>-->
+            </div>
         </div>
     </body>
     <script src="./index.js" type="module"></script>
+    <script src="./Calculator.js" type="module"></script>
 </html>
